--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-# App Descriptor
+# App Descriptor                    
 appTitle=Hello World
 appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
 
@@ -15,6 +15,11 @@ invoiceListTitle=Invoices
 invoiceStatusA=New
 invoiceStatusB=In Progress
 invoiceStatusC=Done
+columnQuantity=Quantity
+columnName=Name
+columnSupplier=Supplier
+columnStatus=Status
+columnPrice=Price
 
 # Detail Page
 detailPageTitle=Walkthrough - Details
@@ -24,4 +29,4 @@ productRatingLabelInitial=Please rate this product
 productRatingLabelIndicator=Your rating: {0} out of {1}
 productRatingLabelFinal=Thank you for your rating!
 productRatingButton=Rate
-ratingConfirmation=Confirmado
+ratingConfirmation=Confirmado                                                   
