(sap-ui5-walkthrought) Step 35: Device Adaptation

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,6 +1,6 @@
-# App Descriptor                    
+# App Descriptor
 appTitle=Hello World
-appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
+appDescription=A simple walkthrough app that explains the most important concepts of UI5
 
 # Hello Panel
 showHelloButtonText=Say Hello
@@ -23,10 +23,12 @@ columnPrice=Price
 
 # Detail Page
 detailPageTitle=Walkthrough - Details
+ratingConfirmation=You have rated this product with {0} stars
+dateTitle=Order date
+quantityTitle=Quantity
 
 # Product Rating
 productRatingLabelInitial=Please rate this product
 productRatingLabelIndicator=Your rating: {0} out of {1}
 productRatingLabelFinal=Thank you for your rating!
 productRatingButton=Rate
-ratingConfirmation=Confirmado                                                   
